--- a/Desktop/Desktop/Pages/Create New Customer.html
+++ b/Desktop/Desktop/Pages/Create New Customer.html
@@ -193,6 +193,9 @@
                 cursor: pointer;
                 background: #428a7d;
             }
+        .navshow {
+            display: none;
+        }
     </style>
     <script>
         //var str = '/2|3/';
@@ -295,8 +298,8 @@
     <ul id="head">
         <li><a href="OrderList.html">Order List</a></li>
         <li><a class="active" href="CustomerList.html">Customer List</a></li>
-        <li><a href="UserList.html">User List</a></li>
-        <li><a href="InsertItem.html">Item List</a></li>
+        <li class="navshow"><a href="UserList.html">User List</a></li>
+        <li class="navshow"><a href="InsertItem.html">Item List</a></li>
     </ul>
 
     <div class="container">
