--- a/Desktop/Desktop/Pages/Create New Order.html
+++ b/Desktop/Desktop/Pages/Create New Order.html
@@ -195,6 +195,9 @@
                 cursor: pointer;
                 background: #428a7d;
             }
+        .navshow {
+            display: none;
+        }
     </style>
     <script>$(document).ready(function () {
 
@@ -450,8 +453,8 @@
     <ul id="head">
         <li><a class="active" href="OrderList.html">Order List</a></li>
         <li><a href="CustomerList.html">Customer List</a></li>
-        <li><a href="UserList.html">User List</a></li>
-        <li><a href="InsertItem.html">Item List</a></li>
+        <li class="navshow"><a href="UserList.html">User List</a></li>
+        <li class="navshow"><a href="InsertItem.html">Item List</a></li>
     </ul>
     <div class="container">
         <div class="title">
