--- a/Desktop/Desktop/Pages/CustomerList.html
+++ b/Desktop/Desktop/Pages/CustomerList.html
@@ -241,6 +241,9 @@
                 box-shadow: 0 6px 14px 0 #666;
                 transform: scale(1.05);
             }
+        .navshow {
+            display: none;
+        }
     </style>
     <script>
         $(document).ready(function () {
@@ -300,8 +303,8 @@
     <ul id="head">
         <li><a href="OrderList.html">Order List</a></li>
         <li><a class="active" href="CustomerList.html">Customer List</a></li>
-        <li><a href="UserList.html">User List</a></li>
-        <li><a href="InsertItem.html">Item List</a></li>
+        <li class="navshow"><a href="UserList.html">User List</a></li>
+        <li class="navshow"><a href="InsertItem.html">Item List</a></li>
     </ul>
     <div class="container">
         <div class="title">
