--- a/Desktop/Desktop/Pages/ItemList.html
+++ b/Desktop/Desktop/Pages/ItemList.html
@@ -226,6 +226,9 @@
             border: solid black 1px;
             text-align: center;
         }
+        .navshow {
+            display: none;
+        }
     </style>
     <script>
         $(document).ready(function () {
