--- a/Desktop/Desktop/Pages/Create New User.html
+++ b/Desktop/Desktop/Pages/Create New User.html
@@ -182,6 +182,9 @@
                 cursor: pointer;
                 background: #428a7d;
             }
+        .navshow {
+            display: none;
+        }
     </style>
 
     <script>
@@ -255,8 +258,8 @@
     <ul id="head">
         <li><a href="OrderList.html">Order List</a></li>
         <li><a href="CustomerList.html">Customer List</a></li>
-        <li><a class="active" href="UserList.html">User List</a></li>
-        <li><a href="InsertItem.html">Item List</a></li>
+        <li class="navshow"><a class="active" href="UserList.html">User List</a></li>
+        <li class="navshow"><a href="InsertItem.html">Item List</a></li>
     </ul>
     <div class="container">
         <div class="title">
