--- a/Desktop/Desktop/Pages/InsertItem.html
+++ b/Desktop/Desktop/Pages/InsertItem.html
@@ -261,6 +261,9 @@
         #steptitle {
             padding: 0px;
         }
+        .navshow {
+            display: none;
+        }
     </style>
     <script>//tree= data from FireBase
         //docid= for delete all the collection
@@ -634,8 +637,8 @@
     <ul id="head">
         <li><a href="OrderList.html">Order List</a></li>
         <li><a href="CustomerList.html">Customer List</a></li>
-        <li><a href="UserList.html">User List</a></li>
-        <li><a class="active" href="InsertItem.html">Item List</a></li>
+        <li class="navshow"><a href="UserList.html">User List</a></li>
+        <li class="navshow"><a class="active" href="InsertItem.html">Item List</a></li>
     </ul>
 
     <div class="container">
