--- a/Desktop/Desktop/Pages/Create New User.html
+++ b/Desktop/Desktop/Pages/Create New User.html
@@ -249,7 +249,70 @@
             return false; // the return false will prevent the form from being submitted
             // hence the page will not reload
         }
+        //function validateForm() {
+        //    var firstname = document.forms["RegForm"]["firstname"];
+        //    var lastname = document.forms["RegForm"]["lastname"];
+        //    var email = document.forms["RegForm"]["email"];
+        //    var phone = document.forms["RegForm"]["phone"];
+        //    var area = document.forms["RegForm"]["area"];
+        //    var username = document.forms["RegForm"]["username"]; 
+        //    var password = document.forms["RegForm"]["password"];
 
+        //    if (firstname.value == "") {
+        //        window.alert("Please enter your First Name.");
+        //        firstname.focus();
+        //        return false;
+        //    }
+
+        //    if (lastname.value == "") {
+        //        window.alert("Please enter your Last Name.");
+        //        firstname.focus();
+        //        return false;
+        //    }
+
+        //    if (email.value == "") {
+        //        window.alert("Please enter a valid e-mail address.");
+        //        email.focus();
+        //        return false;
+        //    }
+
+        //    if (email.value.indexOf("@", 0) < 0) {
+        //        window.alert("Please enter a valid e-mail address.");
+        //        email.focus();
+        //        return false;
+        //    }
+
+        //    if (email.value.indexOf(".", 0) < 0) {
+        //        window.alert("Please enter a valid e-mail address.");
+        //        email.focus();
+        //        return false;
+        //    }
+
+        //    if (phone.value == "") {
+        //        window.alert("Please enter your telephone number.");
+        //        phone.focus();
+        //        return false;
+        //    }
+
+        //    if (area.value == "") {
+        //        window.alert("Please enter your password");
+        //        area.focus();
+        //        return false;
+        //    }
+        //    if (username.value == "") {
+        //        window.alert("Please enter your password");
+        //        username.focus();
+        //        return false;
+        //    }
+        //    if (password.value == "") {
+        //        window.alert("Please enter your password");
+        //        password.focus();
+        //        return false;
+        //    }
+         
+
+        //    return true; 
+        //}
     </script>
 
 
@@ -266,34 +329,34 @@
             <h2>Create New User</h2>
         </div>
         <div class="d-flex">
-            <form action="" method="" id="Sform">
+            <form name="RegForm" id="Sform"> <!--action="/action_page.php" onsubmit="return validateForm()" method="post"-->
                 <label>
                     <span class="lname">First Name<span class="required">*</span></span>
-                    <input type="text" name="lname" id="FirstName">
+                    <input type="text" name="firstname" id="FirstName" required>
                 </label>
                 <label>
                     <span class="lname">Last Name<span class="required">*</span></span>
-                    <input type="text" name="lname" id="LastName">
+                    <input type="text" name="lastname" id="LastName" required>
                 </label>
                 <label>
                     <span>Email<span class="required">*</span></span>
-                    <input type="email" name="lname" id="Email">
+                    <input type="email" name="email" id="Email" required>
                 </label>
                 <label>
                     <span>Phone Number<span class="required">*</span></span>
-                    <input type="tel" name="lname" id="Phone">
+                    <input type="tel" pattern="^\d{10}$" name="phone" id="Phone" required>
                 </label>
                 <label>
                     <span>Area<span class="required">*</span></span>
-                    <input type="text" name="lname" id="Area">
+                    <input type="text" name="area" id="Area" required>
                 </label>
                 <label>
                     <span>User Name<span class="required">*</span></span>
-                    <input type="text" name="lname" id="UserName">
+                    <input type="text" name="username" id="UserName" required>
                 </label>
                 <label>
                     <span>Password<span class="required">*</span></span>
-                    <input type="text" name="lname" id="Password">
+                    <input type="password" name="password" id="Password" required>
                 </label>
                 <input type="submit" value="Create" />
             </form>
