--- a/Desktop/Desktop/Pages/ItemList.html
+++ b/Desktop/Desktop/Pages/ItemList.html
@@ -260,7 +260,7 @@
         <li><a href="OrderList.html">Order List</a></li>
         <li><a href="CustomerList.html">Customer List</a></li>
         <li><a href="UserList.html">User List</a></li>
-        <li><a class="active" href="ItemList.html">Item List</a></li>
+        <li><a class="active" href="ItemList.html">Insert Item</a></li>
     </ul>
     <div class="container">
         <div class="title">
