--- a/Desktop/Desktop/Pages/UserList.html
+++ b/Desktop/Desktop/Pages/UserList.html
@@ -363,8 +363,8 @@
     <ul id="head">
         <li ><a href="OrderList.html">Order List</a></li>
         <li><a href="CustomerList.html">Customer List</a></li>
-        <li class="navshow"><a class="active" href="UserList.html">User List</a></li>
-        <li class="navshow"><a href="InsertItem.html">Item List</a></li>
+        <li ><a class="active" href="UserList.html">User List</a></li>
+        <li ><a href="InsertItem.html">Insert Item</a></li>
     </ul>
     <div class="container">
         <div class="title">
