--- a/Desktop/Desktop/Pages/Create New Customer.html
+++ b/Desktop/Desktop/Pages/Create New Customer.html
@@ -326,8 +326,8 @@
         <div class="d-flex">
             <form id="CForm" name="myForm" action="/action_page.php" onsubmit="return validateForm()" method="post">
                 <label>
-                    <span class="lname">User Name  <span class="required">*</span></span>
-                    <input type="email" name="lname" id="username" placeholder="Enter user name" required>
+                    <span class="lname">Email  <span class="required">*</span></span>
+                    <input type="email" name="lname" id="username" placeholder="Enter your Email" required>
                 </label>
                 <label>
                     <span class="lname">Password <span class="required">*</span></span>
