--- a/Desktop/Desktop/Pages/UpdateUser.html
+++ b/Desktop/Desktop/Pages/UpdateUser.html
@@ -334,7 +334,8 @@
 <body>
     <ul id="head">
         <li><a href="OrderList.html">Order List</a></li>
-        <li><a href="CustomerList.html">Customer List</a></li>
+        <li><a onclick="window.open('../api/customer')">Get Customers List</a></li>
+        <li><a href='Create New Customer.html'>Create New Customer </a></li>
         <li><a class="active" href="UserList.html">User List</a></li>
         <li><a href="InsertItem.html">Insert Item</a></li>
     </ul>
