--- a/Desktop/Desktop/Pages/Create New Order.html
+++ b/Desktop/Desktop/Pages/Create New Order.html
@@ -202,7 +202,7 @@
     <script>$(document).ready(function () {
     Navbar();
     // ajaxCall("GET", "../api/Address", "", successGetAD, errorGetAD);
-    ajaxCall("GET", "../api/Customer", "", successGetEmail, errorGetEmail);
+    ajaxCall("GET", "../api/Address", "", successGetEmail, errorGetEmail);
             //new
 
             ajaxCall("GET", "../api/Categories", "", successGettype, errorGettype);
@@ -550,7 +550,8 @@
 <body>
     <ul id="head">
         <li><a class="active" href="OrderList.html">Order List</a></li>
-        <li><a href="CustomerList.html">Customer List</a></li>
+        <li><a onclick="window.open('../api/customer')">Get Customers List</a></li>
+        <li><a href='Create New Customer.html'>Create New Customer </a></li>
         <li><a id="navuser" style="display:none" href="UserList.html">User List</a></li>
         <li><a id="navbaritem" style="display:none" href="InsertItem.html">Insert Item</a></li>
     </ul>
