--- a/Desktop/Desktop/Pages/OrderList.html
+++ b/Desktop/Desktop/Pages/OrderList.html
@@ -402,10 +402,11 @@
 <body>
     <ul id="head">
         <li><a class="active" href="OrderList.html">Order List</a></li>
-        <li><a href="CustomerList.html">Customer List</a></li>
-        <li ><a id="navuser" style="display:none" href="UserList.html">User List</a></li>
+        <li><a onclick="window.open('../api/customer')">Get Customers List</a></li>
+        <li><a href='Create New Customer.html'>Create New Customer </a></li>
+        <li><a id="navuser" style="display:none" href="UserList.html">User List</a></li>
         <li><a id="navbaritem" style="display:none" href="InsertItem.html">Insert Item</a></li>
-      
+
     </ul>
     <div class="container">
         <div class="title">
