--- a/Desktop/Desktop/Pages/InsertItem.html
+++ b/Desktop/Desktop/Pages/InsertItem.html
@@ -216,7 +216,7 @@
             border-radius: 50%;
             box-shadow: 0 6px 10px 0 #666;
             transition: all 0.1s ease-in-out;
-            font-size: 50px;
+            font-size: 30px;
             color: white;
             text-align: center;
             line-height: 70px;
@@ -675,7 +675,7 @@
 
         </div><!-- Yorder -->
 
-        <div class="fab" onclick=add()> + </div>
+        <div class="fab" onclick=add()> Add </div>
     </div>
 </body>
 </html>
