--- a/Desktop/Desktop/Pages/OrderList.html
+++ b/Desktop/Desktop/Pages/OrderList.html
@@ -326,7 +326,7 @@
                         },
 
                         {
-                            data: "item.Email"
+                            data: "Email"
                         },
                         {
                             render: function (data, type, row, meta) {
