customer list fix

--- a/Desktop/Desktop/Pages/Create New Customer.html
+++ b/Desktop/Desktop/Pages/Create New Customer.html
@@ -304,12 +304,12 @@
     <ul id="head">
         
         <li><a href="OrderList.html">Order List</a></li>
-        <li><a class="active" onclick="window.open('../api/customer')">Get Customers List</a></li>
+        <li><a class="active" href="CustomerList.html">Customers List</a></li>
         <li><a href='Create New Customer.html'>Create New Customer </a></li>
         <li><a id="navuser" style="display:none" href="UserList.html">User List</a></li>
         <li><a id="navbaritem" style="display:none" href="InsertItem.html">Insert Item</a></li>
     </ul>
-
+  
     <div class="container">
         <div class="title">
             <h2>Create New Customer</h2>
